--- a/app/globals.css
+++ b/app/globals.css
@@ -7,11 +7,13 @@
 
     --mbio-primary: #084E4D;
     --mbio-secondary: #6CC1BB;
+    --mbio-tertiary: #0A8040;
+    --mbio-quaternary: #84BC40;
     --mbio-accent: #F9ED5D;
     --mbio-muted: #D9D9D9;
     --mbio-muted-foreground: #D4D4D4;
 
-  
+  --gradient-default: linear-gradient(to right, #84bc40, #0d7f40);
 
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
