--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -9,7 +9,7 @@
     --mbio-secondary: #6CC1BB;
     --mbio-tertiary: #0A8040;
     --mbio-quaternary: #84BC40;
-    --mbio-accent: #F9ED5D;
+    --mbio-accent: #e0d01e;
     --mbio-muted: #D9D9D9;
     --mbio-muted-foreground: #D4D4D4;
 
