--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -5,7 +5,7 @@
 @layer base {
   :root {
 
-    --mbio-primary: #084E4D;
+    --mbio-primary: #2A6F6A;
     --mbio-secondary: #6CC1BB;
     --mbio-tertiary: #0A8040;
     --mbio-quaternary: #84BC40;
